translation in aml policy, fix text & spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11522,7 +11522,7 @@ iframe[data-uk-cover] {
   background-color: #95A5A6;
 }
 .in-card-10 .in-card-orange {
-  background-color: #2970FF;
+  background-color: #fd6a4f;
 }
 
 .in-card-11 .uk-card-default {
